# PBRPathTracing

./: CMakeLists.txt  README.md
resources/hdrs/: readme.md
resources/scenes/: CornellBox-Mirror.yaml  bunny.yaml  cornell.yaml  cornell_glass.yaml  cornell_official.yaml  cornell_water.yaml  dragon.yaml  dragon_chess.yaml  metals.yaml  primitives.yaml  raymarching.yaml  spheres.yaml  sponza.yaml  suzanne.yaml  viking_room.yaml
resources/shaders/: display.frag  display.vert  pathtracer.comp
src/: constants.hpp  main.cpp  slib.cpp  slib.hpp  smath.cpp  smath.hpp  texture.hpp
src/pt/: box.hpp  bvh.hpp  camera.hpp  capsule.hpp  cylinder.hpp  film.hpp  gpu_tracer.hpp  hit.hpp  integrator.hpp  material.hpp  math.hpp  plane.hpp  rng.hpp  rounded_box.hpp  sampler.hpp  scene.hpp  scene_loader.cpp  scene_loader.hpp  sphere.hpp  torus.hpp  tracer.hpp  triangle.hpp
tests/: test_math.cpp  test_pt.cpp
